--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -58,7 +58,7 @@ wasmer = ["radix-engine/wasmer"]
 cpu_ram_metrics = ["radix-engine/cpu_ram_metrics"]
 flamegraph = []
 
-simple-fuzzer = [ "clap", "rand", "rand_chacha", "log" ]
+simple-fuzzer = [ "clap", "log" ]
 dump_manifest_to_file = []
 smart_mutate = []
 
