Use native sdk; Use Vec instead of BTreeMap in genesis (for better Java interop)

--- a/assets/blueprints/genesis_helper/Cargo.toml
+++ b/assets/blueprints/genesis_helper/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { path = "../../../sbor" }
 scrypto = { path = "../../../scrypto" }
+native-sdk = { path = "../../../native-sdk" }
 
 [dev-dependencies]
 transaction = { path = "../../../transaction" }
