Add manifest decompiler command (rtmd)

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -41,6 +41,11 @@ name = "rtmc"
 path = "src/bin/rtmc.rs"
 bench = false
 
+[[bin]]
+name = "rtmd"
+path = "src/bin/rtmd.rs"
+bench = false
+
 [lib]
 bench = false
 
