--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -19,6 +19,7 @@ arbitrary = { version = "1.3.0", features = ["derive"] }
 strum = { version = "0.24.1", default-features = false, features = ["derive"] }
 sbor = { path = "../sbor", default-features = false }
 radix-engine = { path = "../radix-engine", default-features = false, features = ["radix_engine_fuzzing"] }
+radix-engine-common = { path = "../radix-engine-common", default-features = false, features = ["radix_engine_fuzzing"] }
 radix-engine-constants = { path = "../radix-engine-constants" }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
 radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
@@ -32,6 +33,9 @@ scrypto-unit = { path = "../scrypto-unit", default-features = false }
 # - low stability reports
 # More details: https://github.com/rust-fuzz/afl.rs#lazy_static-variables
 lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs", rev = "c5eb91f2bde4c2f70092d1574f7145cb33ff0922" }
+
+# Use forked repo for bnum with Arbitrary traits supported
+bnum = { git = "https://github.com/radixdlt/bnum.git", rev = "0cecbdc7bf59629978cab74786deefe7583c6c2e" }
 
 [workspace]
 members = ["."]
