feat: Added typed substate layout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "radix-engine-stores",
     "radix-engine-tests",
     "radix-engine-constants",
+    "radix-engine-queries",
     "utils",
     "radix-engine-utils",
     "radix-engine-utils/resources-tracker-macro",
