--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 sbor = { path = "../sbor" }
 radix-engine = { path = "../radix-engine" }
 radix-engine-stores = { path = "../radix-engine-stores", features = ["rocksdb"] }
+radix-engine-queries = { path = "../radix-engine-queries" }
 radix-engine-constants = { path = "../radix-engine-constants" }
 radix-engine-interface = { path = "../radix-engine-interface" }
 transaction = { path = "../transaction" }
