--- a/radix-engine-interface/Cargo.toml
+++ b/radix-engine-interface/Cargo.toml
@@ -14,6 +14,7 @@ hex = { version = "0.4.3", default-features = false }
 strum = { version = "0.24", default-features = false, features = ["derive"] }
 bitflags = { version = "1.3" }
 serde_json = { version = "1.0", default-features = false }
+lazy_static = "1.4.0"
 
 [features]
 # You should enable either `std` or `alloc`
