--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -16,12 +16,13 @@ rand_chacha = { version = "0.3.1", optional = true }
 log = { version = "0.4.17", optional = true }
 once_cell = { version = "1.17.1"}
 arbitrary = { version = "1.3.0", features = ["derive"] }
+strum = { version = "0.24.1", default-features = false, features = ["derive"] }
 sbor = { path = "../sbor", default-features = false }
 radix-engine = { path = "../radix-engine", default-features = false, features = ["radix_engine_fuzzing"] }
 radix-engine-constants = { path = "../radix-engine-constants" }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
 radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
-transaction = { path = "../transaction", default-features = false }
+transaction = { path = "../transaction", default-features = false, features = ["radix_engine_fuzzing"] }
 utils = { path = "../utils", default-features = false, features = ["radix_engine_fuzzing"] }
 scrypto-unit = { path = "../scrypto-unit", default-features = false }
 
