Add tests for undeclared package call

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "component",
     "core",
     "clock",
+    "cross_package_call",
     "data_validation",
     "deep_sbor",
     "epoch_manager",
