feat: Faucet and Genesis Helper addresses are fixed

--- a/assets/blueprints/genesis_helper/Cargo.toml
+++ b/assets/blueprints/genesis_helper/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sbor = { path = "../../../sbor" }
 scrypto = { path = "../../../scrypto" }
 native-sdk = { path = "../../../native-sdk" }
+radix-engine-interface = { path = "../../../radix-engine-interface" }
 
 [dev-dependencies]
 transaction = { path = "../../../transaction" }
