--- a/radix-engine-interface/Cargo.toml
+++ b/radix-engine-interface/Cargo.toml
@@ -15,6 +15,7 @@ strum = { version = "0.24", default-features = false, features = ["derive"] }
 bitflags = { version = "1.3" }
 serde_json = { version = "1.0", default-features = false }
 lazy_static = "1.4.0"
+const-sha1 = { git = "https://github.com/radixdlt/const-sha1", default-features = false } # Chosen because of its small size and 0 transitive dependencies
 
 [features]
 # You should enable either `std` or `alloc`
