--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -17,7 +17,7 @@ log = { version = "0.4.17", optional = true }
 once_cell = { version = "1.17.1"}
 arbitrary = { version = "1.3.0", features = ["derive"] }
 strum = { version = "0.24.1", default-features = false, features = ["derive"] }
-sbor = { path = "../sbor", default-features = false }
+sbor = { path = "../sbor", default-features = false, features = ["radix_engine_fuzzing"] }
 radix-engine = { path = "../radix-engine", default-features = false, features = ["radix_engine_fuzzing"] }
 radix-engine-common = { path = "../radix-engine-common", default-features = false, features = ["radix_engine_fuzzing"] }
 radix-engine-constants = { path = "../radix-engine-constants" }
