Add mini resource system

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "local_component",
     "local_recursion",
     "metadata_component",
+    "mini_resource_system",
     "module",
     "non_fungible",
     "package",
