--- a/radix-engine/Cargo.toml
+++ b/radix-engine/Cargo.toml
@@ -21,6 +21,7 @@ strum = { version = "0.24", default-features = false, features = ["derive"] }
 perfcnt = { version = "0.8.0", optional = true }
 radix-engine-utils = { path = "../radix-engine-utils", optional = true, features = ["resource_tracker"] }
 resources-tracker-macro = { path = "../radix-engine-utils/resources-tracker-macro" }
+paste = "1.0.12"
 
 # WASM de-/serialization
 parity-wasm = { version = "0.42.2" }
