Enable more debugs with "verbose" feature

--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -69,6 +69,8 @@ smart_mutate = []
 # If enabled then try to decode manifest from the fuzz data
 decode_tx_manifest = []
 
+verbose = []
+
 #fuzzer = [ "libfuzzer-sys" ]
 #fuzzer = [ "afl" ]
 fuzzer = [ "simple-fuzzer" ]
