Add summary section to Fuzzing workflow summary

--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -117,6 +117,10 @@ jobs:
         ${{ toJSON(github.event.inputs) }}\n \
         ## Repo:\n \
         revision: [${{ github.repository }} - $COMMIT](${{ github.server_url }}/${{ github.repository }}/commit/$COMMIT)\n \
+        ## Summary:\n \
+        \n\`\`\`\n\
+        $(cargo afl whatsup -s afl/transaction | awk '/Fuzzers alive/ {seen=1} seen {print}') \
+        \n\`\`\`\n \
         ## Status:\n \
         \n\`\`\`\n\
         $(cat afl/sessions_info) \
