Include dead fuzzer stats in Fuzzing summary

--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -119,7 +119,7 @@ jobs:
         revision: [${{ github.repository }} - $COMMIT](${{ github.server_url }}/${{ github.repository }}/commit/$COMMIT)\n \
         ## Summary:\n \
         \n\`\`\`\n\
-        $(cargo afl whatsup -s afl/transaction | awk '/Fuzzers alive/ {seen=1} seen {print}') \
+        $(cargo afl whatsup -s -d afl/transaction | awk '/Fuzzers alive/ {seen=1} seen {print}') \
         \n\`\`\`\n \
         ## Status:\n \
         \n\`\`\`\n\
