Add blueprint for all proof creation methods

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "package_schema",
     "package_token",
     "proof",
+    "proof_creation",
     "recursion",
     "reentrancy",
     "reference",
