--- a/scrypto/Cargo.toml
+++ b/scrypto/Cargo.toml
@@ -8,6 +8,7 @@ hex = { version = "0.4.3", default-features = false }
 num-traits = { version = "0.2.15", default-features = false }
 num-bigint = { version = "0.4.3", default-features = false }
 bech32 = { version = "0.9.0", default-features = false }
+radix-engine-common = { path = "../radix-engine-common", default-features = false }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
 radix-engine-derive = { path = "../radix-engine-derive", default-features = false }
 sbor = { path = "../sbor", default-features = false }
