Added a post-instantiation method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "bincode",
         "btreemap",
         "btreeset",
+        "callframe",
         "debuggability",
         "Decompilation",
         "decompile",
