Make workspace build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "Sbor",
         "Scrypto",
         "Secp",
+        "SECURIFY",
         "Substate",
         "substates",
         "unregistration",
