--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "rust-analyzer.linkedProjects": [
         "Cargo.toml",
-        "simulator/Cargo.toml"
+        "simulator/Cargo.toml",
+        "fuzz-tests/Cargo.toml"
     ],
     "cSpell.words": [
         "bech",
