update get_vault to optionally create

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,12 +22,14 @@
         "Instrumenter",
         "Invokable",
         "persistable",
+        "Presecurified",
         "radiswap",
         "repr",
         "Rocksdb",
         "Sbor",
         "Scrypto",
         "Secp",
+        "SECURIFY",
         "Substate",
         "substates",
         "unregistration",
