implement safe deposit feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "SECURIFY",
         "Substate",
         "substates",
+        "undeposited",
         "unregistration",
         "Unstake",
         "unstaked",
