Add VM support and test

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "execution_trace",
     "external_blueprint_caller",
     "fee",
+    "fee_reserve_states",
     "kernel",
     "kv_store",
     "leaks",
