--- a/radix-engine-tests/Cargo.toml
+++ b/radix-engine-tests/Cargo.toml
@@ -29,6 +29,8 @@ rayon = "1.5.3"
 serde = { version = "1.0.144", default-features = false }
 serde_json = { version = "1.0.81", default-features = false }
 crossbeam = { version = "0.8.2" }
+plotters = "0.3.4"
+linreg = "0.2.0"
 
 [[bench]]
 name = "validation"
