--- a/fuzz-tests/Cargo.toml
+++ b/fuzz-tests/Cargo.toml
@@ -23,6 +23,7 @@ radix-engine-common = { path = "../radix-engine-common", default-features = fals
 radix-engine-constants = { path = "../radix-engine-constants" }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false, features = ["radix_engine_fuzzing"]}
 radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
+radix-engine-store-interface = { path = "../radix-engine-store-interface", default-features = false }
 transaction = { path = "../transaction", default-features = false, features = ["radix_engine_fuzzing"] }
 utils = { path = "../utils", default-features = false, features = ["radix_engine_fuzzing"] }
 scrypto-unit = { path = "../scrypto-unit", default-features = false }
@@ -57,8 +58,8 @@ doc = false
 [features]
 # You should enable either `std` or `alloc`
 default = ["std", "fuzzer" ]
-std = ["sbor/std", "transaction/std", "radix-engine/std", "radix-engine-interface/std", "utils/std", "scrypto-unit/std"]
-alloc = ["sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine-interface/alloc", "utils/alloc", "scrypto-unit/alloc"]
+std = ["sbor/std", "transaction/std", "radix-engine/std", "radix-engine-interface/std", "utils/std", "scrypto-unit/std", "radix-engine-store-interface/std"]
+alloc = ["sbor/alloc", "transaction/alloc", "radix-engine/alloc", "radix-engine-interface/alloc", "utils/alloc", "scrypto-unit/alloc", "radix-engine-store-interface/alloc"]
 wasmer = ["radix-engine/wasmer"]
 cpu_ram_metrics = ["radix-engine/cpu_ram_metrics"]
 flamegraph = []
