--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,10 +153,14 @@ jobs:
         toolchain: stable
     - name: Install nextest
       uses: taiki-e/install-action@nextest
+    - name: Install RocksDB metrics dependency
+      run: apt install pkg-config libfreetype6-dev libfontconfig1-dev
     - name: Add wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Build with resource tracking
       run: cargo build --features resource_tracker
+    - name: Build RocksDB metrics test
+      run: cargo test -p radix-engine-utils -p radix-engine-stores --features rocksdb test_store_db --release --no-run
     - name: Run tests
       run: |
         cargo nextest run \
