--- a/radix-engine-utils/Cargo.toml
+++ b/radix-engine-utils/Cargo.toml
@@ -6,14 +6,12 @@ edition = "2021"
 [dependencies]
 radix-engine-store-interface = { path = "../radix-engine-store-interface" }
 radix-engine-stores = { path = "../radix-engine-stores" }
-
-shared_memory = { version = "0.12.4", optional = true }
 fixedstr = "0.2.9"
-plotters = "0.3.4"
-linreg = "0.2.0"
-polyfit-rs = "0.2.1"
-blake2 = { version = "0.10.6", default-features = false }
-rand = "0.8.5"
+shared_memory = { version = "0.12.4", optional = true }
+plotters = { version = "0.3.4", optional = true }
+linreg = { version = "0.2.0", optional = true }
+blake2 = { version = "0.10.6", default-features = false, optional = true }
+rand = { version = "0.8.5", optional = true }
 
 [lib]
 bench = false
@@ -21,4 +19,4 @@ bench = false
 [features]
 default = []
 resource_tracker = ["dep:shared_memory"]
-rocksdb = []
+rocksdb = ["dep:plotters", "dep:linreg", "dep:blake2", "dep:rand"]
