--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -8,7 +8,6 @@ members = [
     "component",
     "core",
     "clock",
-    "cross_package_call",
     "data_validation",
     "deep_sbor",
     "consensus_manager",
@@ -34,6 +33,7 @@ members = [
     "reentrancy",
     "reference",
     "resource",
+    "static_dependencies",
     "stored_external_component",
     "stored_resource",
     "stored_values",
