--- a/radix-engine-utils/Cargo.toml
+++ b/radix-engine-utils/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.9.0"
 edition = "2021"
 
 [dependencies]
-radix-engine-store-interface = { path = "../radix-engine-store-interface" }
-radix-engine-stores = { path = "../radix-engine-stores" }
+radix-engine-store-interface = { path = "../radix-engine-store-interface", default-features = false }
+radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
 fixedstr = "0.2.9"
 shared_memory = { version = "0.12.4", optional = true }
 plotters = { version = "0.3.4", optional = true }
@@ -19,4 +19,4 @@ bench = false
 [features]
 default = []
 resource_tracker = ["dep:shared_memory"]
-rocksdb = ["dep:plotters", "dep:linreg", "dep:blake2", "dep:rand"]
+rocksdb = ["dep:plotters", "dep:linreg", "dep:blake2", "dep:rand", "radix-engine-stores/std", "radix-engine-store-interface/std"]
