--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -34,6 +34,7 @@ members = [
     "reference",
     "resource",
     "static_dependencies",
+    "static_dependencies2",
     "stored_external_component",
     "stored_resource",
     "stored_values",
