Add preallocated address test blueprint

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "package",
     "package_schema",
     "package_token",
+    "preallocated_address",
     "proof",
     "proof_creation",
     "recall",
