--- a/scrypto-derive/Cargo.toml
+++ b/scrypto-derive/Cargo.toml
@@ -9,6 +9,7 @@ bench = false
 
 [dependencies]
 proc-macro2 = { version = "1.0.38" }
+radix-engine-common = { path = "../radix-engine-common", default-features = false }
 syn = { version = "1.0.93", features = ["full", "extra-traits"] }
 quote = { version = "1.0.18" }
 serde = { version = "1.0.137", default-features = false }
