--- a/native-sdk/Cargo.toml
+++ b/native-sdk/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sbor = { path = "../sbor", default-features = false }
+radix-engine-common = { path = "../radix-engine-common", default-features = false }
 radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
 radix-engine-derive = { path = "../radix-engine-derive", default-features = false }
 utils = { path = "../utils", default-features = false }
@@ -12,8 +13,8 @@ utils = { path = "../utils", default-features = false }
 [features]
 # You should enable either `std` or `alloc`
 default = ["std"]
-std = ["sbor/std", "radix-engine-interface/std", "radix-engine-derive/std", "utils/std"]
-alloc = ["sbor/alloc", "radix-engine-interface/alloc", "radix-engine-derive/alloc", "utils/alloc"]
+std = ["sbor/std", "radix-engine-interface/std", "radix-engine-derive/std", "utils/std", "radix-engine-common/std"]
+alloc = ["sbor/alloc", "radix-engine-interface/alloc", "radix-engine-derive/alloc", "utils/alloc", "radix-engine-common/alloc"]
 
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
