--- a/radix-engine-common/Cargo.toml
+++ b/radix-engine-common/Cargo.toml
@@ -14,7 +14,7 @@ hex = { version = "0.4.3", default-features = false }
 num-traits = { version = "0.2.15", default-features = false }
 num-integer = { version = "0.1.45", default-features = false }
 num-bigint = { version = "0.4.3", default-features = false }
-bnum = { version = "0.6.0", default-features = false, features = ["numtraits"] }
+bnum = { version = "0.7.0", default-features = false, features = ["numtraits"] }
 bech32 = { version = "0.9.0", default-features = false }
 paste = { version = "1.0.7"}
 blake2 = { version = "0.10.6", default-features = false }
@@ -48,7 +48,7 @@ alloc = ["hex/alloc", "sbor/alloc", "utils/alloc", "radix-engine-derive/alloc", 
 
 # This flag is set by fuzz-tests framework and it is used to disable/enable some optional features
 # to let fuzzing work
-radix_engine_fuzzing = ["arbitrary"]
+radix_engine_fuzzing = ["arbitrary", "bnum/arbitrary"]
 
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
