rename many resource pool to multi resource pool

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "rust-analyzer.linkedProjects": [
         "Cargo.toml",
         "simulator/Cargo.toml",
-        "fuzz-tests/Cargo.toml"
+        "fuzz-tests/Cargo.toml",
     ],
     "cSpell.words": [
         "bech",
