--- a/radix-engine-tests/Cargo.toml
+++ b/radix-engine-tests/Cargo.toml
@@ -31,6 +31,7 @@ serde = { version = "1.0.144", default-features = false }
 serde_json = { version = "1.0.81", default-features = false }
 crossbeam = { version = "0.8.2" }
 walkdir = { version = "2.3.3" }
+paste = { version = "1.0.12" }
 
 
 [[bench]]
