--- a/radix-engine/Cargo.toml
+++ b/radix-engine/Cargo.toml
@@ -42,6 +42,7 @@ wasmer = { version = "2.2.1", optional = true }
 wasmer-compiler-singlepass = { version = "2.2.1", optional = true }
 
 serde_json = { version = "1.0.81", optional = true, default-features = false }
+lazy_static = { version = "1.4.0" }
 
 [dev-dependencies]
 wabt = { version = "0.10.0" }
