--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -47,7 +47,8 @@ members = [
     "transaction_runtime",
     "events",
     "events_invalid",
-    "logger"
+    "logger",
+    "wasm_non_mvp"
 ]
 
 [profile.release]
