--- a/radix-engine/Cargo.toml
+++ b/radix-engine/Cargo.toml
@@ -73,6 +73,10 @@ resource_tracker = ["dep:radix-engine-profiling", "resources-tracker-macro/resou
 # to prevent non-determinism when fuzzing
 radix_engine_fuzzing = []
 
+# This flag enables code parts use only for testing. Using "test" config option is not enough in cases,
+# when external crate is used for tests (eg. radix-engine-tests)
+radix_engine_tests = []
+
 # Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
 [lib]
 bench = false
