--- a/radix-engine/Cargo.toml
+++ b/radix-engine/Cargo.toml
@@ -14,7 +14,9 @@ transaction = { path = "../transaction", default-features = false }
 utils = { path = "../utils", default-features = false }
 colored = { version = "2.0.0", default-features = false }
 hex = { version = "0.4.3", default-features = false }
+num-traits = { version = "0.2.15", default-features = false }
 bitflags = { version = "1.3" }
+lazy_static = "1.4.0"
 lru = { version = "0.8.1", default-features = false, optional = true}
 moka = { version = "0.9.4", features = ["sync"], default-features = false, optional = true }
 strum = { version = "0.24", default-features = false, features = ["derive"] }
