Add Tx parts to HRP Set

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "instantiatable",
         "Instrumenter",
         "Invokable",
+        "notarizedtransaction",
         "persistable",
         "Presecurified",
         "radiswap",
@@ -33,8 +34,10 @@
         "Scrypto",
         "Secp",
         "SECURIFY",
+        "signedintent",
         "Substate",
         "substates",
+        "txid",
         "undeposited",
         "unregistration",
         "Unstake",
