Prevent publishing wasm package in scrypto

--- a/radix-engine-tests/tests/blueprints/Cargo.toml
+++ b/radix-engine-tests/tests/blueprints/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "package_token",
     "proof",
     "proof_creation",
+    "publish_package",
     "recall",
     "recursion",
     "reentrancy",
